[gd_scene load_steps=14 format=2]

[ext_resource path="res://characters/enemies/metallsv/metallsv.png" type="Texture" id=1]
[ext_resource path="res://characters/enemies/base/EnemyBase.tscn" type="PackedScene" id=2]
[ext_resource path="res://characters/enemies/metallsv/shoot.gd" type="Script" id=3]
[ext_resource path="res://characters/enemies/metall/trigger_area.gd" type="Script" id=4]
[ext_resource path="res://characters/enemies/metallsv/metallsv_state_machine.gd" type="Script" id=5]
[ext_resource path="res://characters/enemies/metallsv/walk.gd" type="Script" id=6]
[ext_resource path="res://characters/enemies/metallsv/hide.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
resource_local_to_scene = true
extents = Vector2( 8, 9 )

[sub_resource type="Animation" id=3]
resource_name = "hide"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 7, 6, 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "shoot"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 10, 11, 12 ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 15, 16, 17, 18, 19, 18, 17, 16 ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 100.0

[node name="Metallsv" instance=ExtResource( 2 )]
hit_points_max = 3

[node name="Collider" parent="." index="0"]
shape = SubResource( 1 )

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="Sprite" parent="." index="2"]
position = Vector2( -1, -13 )
texture = ExtResource( 1 )
vframes = 5
frame = 12
region_enabled = true
region_rect = Rect2( 48, 0, 180, 215 )

[node name="EnemyAnimations" type="AnimationPlayer" parent="." index="6"]
anims/hide = SubResource( 3 )
anims/shoot = SubResource( 5 )
anims/walk = SubResource( 4 )

[node name="StateMachine" parent="." index="8"]
script = ExtResource( 5 )
start_state = NodePath("Hide")

[node name="Walk" type="Node" parent="StateMachine" index="1"]
script = ExtResource( 6 )

[node name="Hide" type="Node" parent="StateMachine" index="2"]
script = ExtResource( 7 )

[node name="Shoot" type="Node" parent="StateMachine" index="3"]
script = ExtResource( 3 )

[node name="ShootArea" type="Area2D" parent="." index="10"]
collision_mask = 2
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ShootArea" index="0"]
shape = SubResource( 7 )

[node name="Timer" type="Timer" parent="." index="11"]
process_mode = 0
wait_time = 3.0
autostart = true

[node name="WalkDurationTimer" type="Timer" parent="." index="12"]
